content/consul/v1.22.x/content/docs/north-south/api-gateway/vm/route.mdx
---
layout: docs
page_title: Define API gateway routes on virtual machines
description: Learn how to define and attach HTTP and TCP routes to Consul API gateway listeners so that requests from external clients can reach services in the mesh.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-11-05T11:02:51-05:00
last_modified: 2026-01-09T14:32:11-06:00
# END AUTO GENERATED METADATA
---

> [!IMPORTANT]
> Product documentation in `/website` is mirrored from `hashicorp/web-unified-docs`. Keep this page aligned with the canonical docs there.

# Define API gateway routes on virtual machines

This topic describes how to configure HTTP and TCP routes and attach them to Consul API gateway listeners. Routes are rule-based configurations that allow external clients to send requests to services in the mesh.

## Overview

The following steps describe the general workflow for defining and deploying routes:

1. Define routes in an HTTP or TCP configuration entry. The configuration entry includes request routing rules, target services, and the gateway listener attachment.
1. Deploy the configuration entry to create routes and attach them to the gateway.

Routes and gateways are eventually-consistent objects that expose status conditions. You must check route status to confirm successful binding.

## Requirements

The following requirements must be satisfied to use API gateways on VMs:

- Consul 1.15 or later
- A Consul cluster with service mesh enabled. Refer to [`connect`](/consul/docs/reference/agent/configuration-file/service-mesh#connect)
- Network connectivity between the machine deploying the API gateway and a Consul cluster agent or server

### ACL requirements

If ACLs are enabled, you must present a token with the following permissions to configure Consul and deploy API gateway routes:

- `mesh: read`
- `mesh: write`

Refer to [Mesh Rules](/consul/docs/security/acl/acl-rules#mesh-rules) for additional information.

## Define the routes

Define route configurations and bind them to gateway listeners so Consul can route incoming requests to mesh services.

1. Create a route configuration file and specify:
   - `Kind`: set to `http-route` or `tcp-route`
   - `Name`: route name
   - `Parents`: list of API gateways/listeners this route binds to
   - `Rules`: for `http-route`, define routing rules (`Filters`, `Matches`, `Services`)
1. Configure any additional fields needed for your use case, such as namespace or admin partition.
1. Save the configuration.

Refer to the [HTTP route configuration entry](/consul/docs/reference/config-entry/http-route) and [TCP route configuration entry](/consul/docs/reference/config-entry/tcp-route) references for complete field definitions.

The following example routes requests from a gateway listener to services based on path matching. Requests to `/` are split between `ui` and `experimental-ui`; requests to `/api` route to `api`.

```hcl
Kind = "http-route"
Name = "my-http-route"

# Rules define how requests are routed
Rules = [
  {
    Matches = [
      {
        Path = {
          Match = "prefix"
          Value = "/"
        }
      }
    ]
    Services = [
      {
        Name = "ui"
        Weight = 90
      },
      {
        Name = "experimental-ui"
        Weight = 10
      }
    ]
  },
  {
    Matches = [
      {
        Path = {
          Match = "prefix"
          Value = "/api"
        }
      }
    ]
    Services = [
      {
        Name = "api"
      }
    ]
  }
]

Parents = [
  {
    Kind = "api-gateway"
    Name = "my-gateway"
    SectionName = "my-http-listener"
  }
]
```

## TLS SDS service overrides (latest behavior)

Route services can override listener/gateway default certificates by setting `TLS.SDS`.

### HTTP route service override

Use `Rules[].Services[].TLS.SDS` in `http-route`.

- `CertResource` is required when `SDS` is set.
- `ClusterName` is optional and inherited from effective listener/gateway SDS cluster when omitted.
- `Hostnames` must be set on the HTTP route when using service `TLS.SDS` overrides.

```hcl
Kind = "http-route"
Name = "api-route"

Parents = [
  {
    Kind = "api-gateway"
    Name = "my-gateway"
    SectionName = "my-http-listener"
  }
]

Hostnames = ["foo.example.com", "bar.example.com"]

Rules = [
  {
    Services = [
      {
        Name = "svc-foo"
        TLS = {
          SDS = {
            CertResource = "foo.example.com"
          }
        }
      },
      {
        Name = "svc-bar"
      }
    ]
  }
]
```

### TCP route service override

Use `Services[].TLS.SDS` in `tcp-route`.

- `CertResource` is required when `SDS` is set.
- `ClusterName` is optional and inherited from effective listener/gateway SDS cluster when omitted.
- TCP routes currently support at most one service.
- A TCP listener can only have one distinct effective TCP SDS override; conflicting overrides are rejected.

```hcl
Kind = "tcp-route"
Name = "my-tcp-route"

Parents = [
  {
    Kind = "api-gateway"
    Name = "my-gateway"
    SectionName = "my-tcp-listener"
  }
]

Services = [
  {
    Name = "payments"
    TLS = {
      SDS = {
        CertResource = "payments.internal.example.com"
      }
    }
  }
]
```

### Effective precedence

Certificate selection precedence is:

1. Route service `TLS.SDS`
1. Listener `TLS.SDS`
1. Gateway top-level `TLS.SDS`

## Deploy the route configuration

Run `consul config write` to attach routes to the specified gateway/listener. The following example writes a configuration called `my-http-route.hcl`:

```shell-session
$ consul config write my-http-route.hcl
```

After deployment, verify route status conditions to confirm the route is accepted and bound.

## Related pages

- [HTTP route configuration entry reference](/consul/docs/reference/config-entry/http-route)
- [TCP route configuration entry reference](/consul/docs/reference/config-entry/tcp-route)
- [API gateway configuration entry reference](/consul/docs/reference/config-entry/api-gateway)
- [Deploy API gateway listeners to virtual machines](/consul/docs/north-south/api-gateway/vm/listener)

